twoTestFinished